[gd_scene load_steps=6 format=3 uid="uid://dx25pnfrmbvm3"]

[ext_resource type="Script" path="res://Game/PatronSelection/patron_selection.gd" id="1_svgqn"]
[ext_resource type="Texture2D" uid="uid://bmyvgmdfi6le1" path="res://Assets/Art/Screens/Buttons/Choose Button.png" id="2_gebyi"]

[sub_resource type="Gradient" id="Gradient_rcky1"]
offsets = PackedFloat32Array(0.00324675, 1)
colors = PackedColorArray(0.890196, 0.854902, 0.733333, 1, 0.890196, 0.854902, 0.733333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rmguf"]
gradient = SubResource("Gradient_rcky1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubdgb"]
bg_color = Color(0.647059, 0.662745, 0.682353, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="PatronSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_svgqn")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -64.0
offset_right = 1216.0
offset_bottom = 656.0
texture = SubResource("GradientTexture2D_rmguf")

[node name="Button1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 456.0
offset_right = 696.0
offset_bottom = 760.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("2_gebyi")

[node name="Button2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 456.0
offset_right = 1056.0
offset_bottom = 760.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("2_gebyi")

[node name="Button3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 456.0
offset_right = 1432.0
offset_bottom = 760.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("2_gebyi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 24.0
offset_right = 368.0
offset_bottom = 624.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ubdgb")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 24.0
offset_right = 728.0
offset_bottom = 624.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ubdgb")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 24.0
offset_right = 1104.0
offset_bottom = 624.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ubdgb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 128.0
offset_top = 64.0
offset_right = 312.0
offset_bottom = 106.0

[node name="ThorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Thor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 64.0
offset_right = 664.0
offset_bottom = 112.0

[node name="TyrLabel" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Tyr"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 864.0
offset_top = 64.0
offset_right = 1048.0
offset_bottom = 106.0

[node name="FreyaLabel" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Freya"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CallToActionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = -40.0
offset_right = 839.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Choose your Patron God"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
